--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
+<IfModule	mod_rewrite.c>
 RewriteEngine On
 #RewriteCond %{HTTPS} off
 #RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
@@ -5,3 +6,4 @@ RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . index.php [L]
+</IfModule>
